force-app/main/default/objects/Offer__c/fields/BundlesNo__c.field-meta.xml
<CustomField>
    <fullName>BundlesNo__c</fullName>
    <label>Nummer of Bundles</label>
    <summaryForeignKey>OfferBundle__c.Offer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>