force-app/main/default/objects/Offer__c/fields/BundleSum__c.field-meta.xml
<CustomField>
    <fullName>BundleSum__c</fullName>
    <label>Bundle Price (Sum)</label>
    <summarizedField>OfferBundle__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>OfferBundle__c.Offer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>