force-app/main/default/objects/Offer__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.Discount__c)),Account__r.Discount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General Discount (Account)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>