force-app/main/default/objects/Offer__c/fields/ItemsTotal__c.field-meta.xml
<CustomField>
    <fullName>ItemsTotal__c</fullName>
    <label>Items Total</label>
    <summarizedField>OfferBundle__c.LinesTotal__c</summarizedField>
    <summaryForeignKey>OfferBundle__c.Offer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>