force-app/main/default/objects/Offer__c/fields/ShippingData__c.field-meta.xml
<CustomField>
    <fullName>ShippingData__c</fullName>
    <label>Shipping Data</label>
    <type>Date</type>
</CustomField>